# Bagel

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  run.py
.github/workflows/: unit-tests.yaml
bagel/: download.py  ingest.py  produce.py  run.py  validate.py
bagel/temp/: BaGEL-test.mrk
tests/: conftest.py  context.py  test_download.py  test_ingest.py  test_produce.py  test_validate.py
tests/files/: B(a)GEL metadata submission form (Responses) - Form Responses 1.csv
