[project]
name = "bagel"
version = "0.1.0"
description = "Scripts for ingesting data & producing MARC21 records for BPL Board Game Library"
authors = [
    {name = "Tomasz Kalata",email = "klingaroo@gmail.com"},
    {name = "Charlotte Kostelic",email = "charlottekostelic@bookops.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pymarc (>=5.2.3,<6.0.0)", "pandas (>=2.2.3,<3.0.0)", "pandas-stubs (>=2.2.3.241126,<3.0.0)",
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
